# ttscli

./: CLAUDE.md  README.md  pyproject.toml
src/ttscli/: audio.py  cli.py  config.py  models.py  parser.py  progress.py
src/ttscli/providers/: __init__.py  base.py  elevenlabs.py  gemini.py  minimax.py
